// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StepCommonFields /> tests Should render properly with no data 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main"
    >
      <div>
        <p
          class="StyledProps--font StyledProps--main StyledProps--margin-top-small"
        >
          Set container Resources
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <button
                class="bp3-button bp3-minimal StyledProps--font Button--button Button--iconOnly StyledProps--main"
                tabindex="0"
                type="button"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="question"
                >
                  <svg
                    height="14"
                    viewBox="0 0 14 14"
                    width="14"
                  >
                    <path
                      d="M7 .1C3.2.1.1 3.2.1 7s3.1 6.9 6.9 6.9 6.9-3.1 6.9-6.9S10.8.1 7 .1zm0 1.2c3.2 0 5.7 2.6 5.7 5.7s-2.6 5.7-5.7 5.7S1.3 10.2 1.3 7 3.8 1.3 7 1.3zm0 2.3c-1.3 0-2.3 1-2.3 2.3h1.1c0-.6.5-1.1 1.1-1.1S8 5.3 8 5.9c0 .4-.3.8-.7 1h-.1c-.4.2-.8.6-.8 1.1v.7h1.1V8l.2-.1c.9-.3 1.5-1.1 1.5-2.1.1-1.2-.9-2.2-2.2-2.2zm-.6 5.7v1.1h1.1V9.3H6.4z"
                      fill="#9AA5B5"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
        </p>
        <div
          class="fieldsGroup withoutSpacing withoutAligning"
        >
          <div
            style="flex-grow: 1; flex-basis: 50%;"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--margin-bottom-xsmall"
            >
              Limit Memory
            </p>
            <div
              style="display: flex; align-items: center;"
            >
              <div
                class="bp3-form-group"
                data-id="spec.limitMemory-0"
                style="margin-bottom: 0px; flex-grow: 1;"
              >
                
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                  >
                    <div
                      class="bp3-input-group MultiTypeInput--input"
                    >
                      <input
                        class="bp3-input"
                        name="spec.limitMemory"
                        placeholder="128Mi"
                        type="text"
                        value=""
                      />
                    </div>
                    <span
                      class="bp3-popover-wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <button
                          class="MultiTypeInput--btn MultiTypeInput--FIXED"
                        >
                          <span
                            class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-white"
                            data-icon="fixed-input"
                          >
                            <svg
                              height="12"
                              viewBox="0 0 9 9"
                              width="12"
                            >
                              <path
                                d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                fill="#009dff"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            style="flex-grow: 1; flex-basis: 50%;"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--margin-bottom-xsmall"
            >
              Limit CPU
            </p>
            <div
              style="display: flex; align-items: center;"
            >
              <div
                class="bp3-form-group"
                data-id="spec.limitCPU-1"
                style="margin-bottom: 0px; flex-grow: 1;"
              >
                
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                  >
                    <div
                      class="bp3-input-group MultiTypeInput--input"
                    >
                      <input
                        class="bp3-input"
                        name="spec.limitCPU"
                        placeholder="0.2"
                        type="text"
                        value=""
                      />
                    </div>
                    <span
                      class="bp3-popover-wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <button
                          class="MultiTypeInput--btn MultiTypeInput--FIXED"
                        >
                          <span
                            class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-white"
                            data-icon="fixed-input"
                          >
                            <svg
                              height="12"
                              viewBox="0 0 9 9"
                              width="12"
                            >
                              <path
                                d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                fill="#009dff"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="bp3-form-group removeBpLabelMargin"
          data-id="timeout-2"
          style="margin-bottom: 0px;"
        >
          <label
            class="bp3-label"
            for="timeout"
          >
            <p
              class="StyledProps--font StyledProps--main"
              style="display: flex; align-items: center;"
            >
              Timeout
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button bp3-minimal StyledProps--font Button--button Button--iconOnly StyledProps--main"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="question"
                    >
                      <svg
                        height="14"
                        viewBox="0 0 14 14"
                        width="14"
                      >
                        <path
                          d="M7 .1C3.2.1.1 3.2.1 7s3.1 6.9 6.9 6.9 6.9-3.1 6.9-6.9S10.8.1 7 .1zm0 1.2c3.2 0 5.7 2.6 5.7 5.7s-2.6 5.7-5.7 5.7S1.3 10.2 1.3 7 3.8 1.3 7 1.3zm0 2.3c-1.3 0-2.3 1-2.3 2.3h1.1c0-.6.5-1.1 1.1-1.1S8 5.3 8 5.9c0 .4-.3.8-.7 1h-.1c-.4.2-.8.6-.8 1.1v.7h1.1V8l.2-.1c.9-.3 1.5-1.1 1.5-2.1.1-1.2-.9-2.2-2.2-2.2zm-.6 5.7v1.1h1.1V9.3H6.4z"
                          fill="#9AA5B5"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </p>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              style="display: flex; align-items: center;"
            >
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                style="flex-grow: 1;"
              >
                <div
                  class="bp3-input-group bp3-fill"
                >
                  <input
                    class="bp3-input"
                    name="timeout"
                    placeholder="Enter w/d/h/m/s/ms"
                    type="text"
                    value=""
                  />
                </div>
                <span
                  class="bp3-popover-wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="MultiTypeInput--btn MultiTypeInput--FIXED"
                    >
                      <span
                        class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-white"
                        data-icon="fixed-input"
                      >
                        <svg
                          height="12"
                          viewBox="0 0 9 9"
                          width="12"
                        >
                          <path
                            d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                            fill="#009dff"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`<StepCommonFields /> tests Should render properly with passed initial values 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main"
    >
      <div>
        <p
          class="StyledProps--font StyledProps--main StyledProps--margin-top-small"
        >
          Set container Resources
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <button
                class="bp3-button bp3-minimal StyledProps--font Button--button Button--iconOnly StyledProps--main"
                tabindex="0"
                type="button"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="question"
                >
                  <svg
                    height="14"
                    viewBox="0 0 14 14"
                    width="14"
                  >
                    <path
                      d="M7 .1C3.2.1.1 3.2.1 7s3.1 6.9 6.9 6.9 6.9-3.1 6.9-6.9S10.8.1 7 .1zm0 1.2c3.2 0 5.7 2.6 5.7 5.7s-2.6 5.7-5.7 5.7S1.3 10.2 1.3 7 3.8 1.3 7 1.3zm0 2.3c-1.3 0-2.3 1-2.3 2.3h1.1c0-.6.5-1.1 1.1-1.1S8 5.3 8 5.9c0 .4-.3.8-.7 1h-.1c-.4.2-.8.6-.8 1.1v.7h1.1V8l.2-.1c.9-.3 1.5-1.1 1.5-2.1.1-1.2-.9-2.2-2.2-2.2zm-.6 5.7v1.1h1.1V9.3H6.4z"
                      fill="#9AA5B5"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
        </p>
        <div
          class="fieldsGroup withoutSpacing withoutAligning"
        >
          <div
            style="flex-grow: 1; flex-basis: 50%;"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--margin-bottom-xsmall"
            >
              Limit Memory
            </p>
            <div
              style="display: flex; align-items: center;"
            >
              <div
                class="bp3-form-group"
                data-id="spec.limitMemory-0"
                style="margin-bottom: 0px; flex-grow: 1;"
              >
                
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                  >
                    <div
                      class="bp3-input-group MultiTypeInput--input"
                    >
                      <input
                        class="bp3-input"
                        name="spec.limitMemory"
                        placeholder="128Mi"
                        type="text"
                        value="128Mi"
                      />
                    </div>
                    <span
                      class="bp3-popover-wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <button
                          class="MultiTypeInput--btn MultiTypeInput--FIXED"
                        >
                          <span
                            class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-white"
                            data-icon="fixed-input"
                          >
                            <svg
                              height="12"
                              viewBox="0 0 9 9"
                              width="12"
                            >
                              <path
                                d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                fill="#009dff"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            style="flex-grow: 1; flex-basis: 50%;"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--margin-bottom-xsmall"
            >
              Limit CPU
            </p>
            <div
              style="display: flex; align-items: center;"
            >
              <div
                class="bp3-form-group"
                data-id="spec.limitCPU-1"
                style="margin-bottom: 0px; flex-grow: 1;"
              >
                
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                  >
                    <div
                      class="bp3-input-group MultiTypeInput--input"
                    >
                      <input
                        class="bp3-input"
                        name="spec.limitCPU"
                        placeholder="0.2"
                        type="text"
                        value="0.1"
                      />
                    </div>
                    <span
                      class="bp3-popover-wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <button
                          class="MultiTypeInput--btn MultiTypeInput--FIXED"
                        >
                          <span
                            class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-white"
                            data-icon="fixed-input"
                          >
                            <svg
                              height="12"
                              viewBox="0 0 9 9"
                              width="12"
                            >
                              <path
                                d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                fill="#009dff"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="bp3-form-group removeBpLabelMargin"
          data-id="timeout-2"
          style="margin-bottom: 0px;"
        >
          <label
            class="bp3-label"
            for="timeout"
          >
            <p
              class="StyledProps--font StyledProps--main"
              style="display: flex; align-items: center;"
            >
              Timeout
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button bp3-minimal StyledProps--font Button--button Button--iconOnly StyledProps--main"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="question"
                    >
                      <svg
                        height="14"
                        viewBox="0 0 14 14"
                        width="14"
                      >
                        <path
                          d="M7 .1C3.2.1.1 3.2.1 7s3.1 6.9 6.9 6.9 6.9-3.1 6.9-6.9S10.8.1 7 .1zm0 1.2c3.2 0 5.7 2.6 5.7 5.7s-2.6 5.7-5.7 5.7S1.3 10.2 1.3 7 3.8 1.3 7 1.3zm0 2.3c-1.3 0-2.3 1-2.3 2.3h1.1c0-.6.5-1.1 1.1-1.1S8 5.3 8 5.9c0 .4-.3.8-.7 1h-.1c-.4.2-.8.6-.8 1.1v.7h1.1V8l.2-.1c.9-.3 1.5-1.1 1.5-2.1.1-1.2-.9-2.2-2.2-2.2zm-.6 5.7v1.1h1.1V9.3H6.4z"
                          fill="#9AA5B5"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </p>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              style="display: flex; align-items: center;"
            >
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                style="flex-grow: 1;"
              >
                <div
                  class="bp3-input-group bp3-fill"
                >
                  <input
                    class="bp3-input"
                    name="timeout"
                    placeholder="Enter w/d/h/m/s/ms"
                    type="text"
                    value=""
                  />
                </div>
                <span
                  class="bp3-popover-wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="MultiTypeInput--btn MultiTypeInput--FIXED"
                    >
                      <span
                        class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-white"
                        data-icon="fixed-input"
                      >
                        <svg
                          height="12"
                          viewBox="0 0 9 9"
                          width="12"
                        >
                          <path
                            d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                            fill="#009dff"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;
